--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
+    
 </head>
 <body>
-    <img class="lnXdpd" alt="Google" src="/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" srcset="/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png 1x, /images/branding/googlelogo/2x/googlelogo_color_272x92dp.png 2x" data-atf="1" width="272" height="92">
+    <img class="lnXdpd" alt="Google" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" srcset="/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png 1x, /images/branding/googlelogo/2x/googlelogo_color_272x92dp.png 2x" data-atf="1" width="272" height="92">
 </body>
